typos here and there

--- a/15-3DAnalyses.tex
+++ b/15-3DAnalyses.tex
@@ -2,7 +2,7 @@
 
 \diva can be used to perform 3D-analysis for a given variable in an oceanic basin. In this case \diva tools are generally applied to successive horizontal layers at different depths of the basin. The resulting 2D-field analyses are gathered in 3D binary and NetCDF files.
 
-The working directory to perform 3D-analyses is the same as for 2D-analyses: \linebreak \directory{GODIVA\_mm\_yyyy/DIVA3D/divastripped}, where mm and yyyy indicate the month and the year of the considered release.
+The working directory to perform 3D-analyses is the same as for 2D-analyses: \linebreak \directory{diva-4.6.1/DIVA3D/divastripped}.
 
 %\newpage % 
 
@@ -11,7 +11,7 @@ The working directory to perform 3D-analyses is the same as for 2D-analyses: \li
 \section{Input subdirectories}
 %----------------
 
-As described before, to perform a 2D-analysis, one needs to provide a set of input files in the \directory{DIVA3D/divastripped/input/} subdirectory. For 3D-analysis, the input files are provided in subdirectories of the input directory and in the input directory.
+As described in Section~\ref{sec:diva2Dinput}, to perform a 2D-analysis, one needs to provide a set of input files in the \directory{DIVA3D/divastripped/input/} directory. For 3D-analysis, the input files are provided in subdirectories of the input directory and in the input directory.
 
 \subsection[divadata subdirectory]{divadata subdirectory}
 
