--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.5.
+% This file was created with JabRef 2.7b.
 % Encoding: UTF-8
 
 @STRING{ag = {Advances in Geosciences}}
@@ -546,6 +546,17 @@
   pages = {13529-13541}
 }
 
+@BOOK{fcef9d7c510749b0b422021ae57bd58c,
+  title = {Modeling of Thermo-Electro-Mechanical Manufacturing Processes with
+	Applications in Metal Forming and Resistance Welding},
+  publisher = {Springer},
+  year = {2012},
+  author = {Nielsen, {Chris Valentin} and Wengi Zhang and Luis Alves and Niels
+	Bay and Martins, {Paulo F.}},
+  series = {Springer Briefs in Applied Sciences and Technology: Manufacturing
+	and Surface Engineering}
+}
+
 @ARTICLE{OOYAMA87,
   author = {K. V. Ooyama},
   title = {Scale-controlled objective analysis},
@@ -856,6 +867,22 @@
   url = {http://www.agu.org/journals/jc/jc1209/2012JC007936/}
 }
 
+@CONFERENCE{ZENDER12,
+  author = {C. S. Zender and P. Vicente and W. Wang},
+  title = {NCO: Simpler and faster model evaluation by NASA satellite data via
+	unified file-level netCDF and HDF-EOS data post-processing tools},
+  booktitle = {Fall Meeting of the American Geophysical Union},
+  year = {2012},
+  volume = {{Eos Trans. AGU, 93}},
+  number = {53},
+  pages = {Abstract IN34A-07},
+  address = {{San Francisco, CA}},
+  month = {December},
+  owner = {ctroupin},
+  timestamp = {2013.04.22},
+  url = {http://nco.sourceforge.net/}
+}
+
 @ARTICLE{ZHANG10,
   author = {Zhang, H. and Wang, Y.},
   title = {Kriging and cross-validation for massive spatial data},
@@ -867,13 +894,5 @@
   doi = {10.1002/env.1023},
   owner = {charles},
   timestamp = {2011.09.29}
-}
-
-@book{fcef9d7c510749b0b422021ae57bd58c,
-title = "Modeling of Thermo-Electro-Mechanical Manufacturing Processes with Applications in Metal Forming and Resistance Welding",
-publisher = "Springer",
-author = "Nielsen, {Chris Valentin} and Wengi Zhang and Luis Alves and Niels Bay and Martins, {Paulo F.}",
-year = "2012",
-series = "Springer Briefs in Applied Sciences and Technology: Manufacturing and Surface Engineering",
 }
 
