--- a/3-DivaConditionUse.tex
+++ b/3-DivaConditionUse.tex
@@ -85,7 +85,7 @@ Various example files are provided for different situations.
 
 
 Troupin, C.; Ouberdous, M.; Sirjacobs, D.; Alvera-Azcárate, A.; Barth, A.; Toussaint, M.-E. \& Beckers, J.-M. (2013) \diva User Guide.\\
-\url{http://modb.oce.ulg.ac.be/mediawiki/upload/DIVA/notes/DivaUserGuide_March2013.pdf}
+\url{http://modb.oce.ulg.ac.be/mediawiki/index.php/Diva_documents}
 
 
 \item and the related peer-reviewed publication:
