--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -464,7 +464,7 @@ In an infinite domain, the correlation function was shown to be proportional to 
 	\parbox{.6\textwidth}{
 		\includegraphics[width=.55\textwidth,bb=73 253 487 575]{kernelf}
 		}\parbox{.4\textwidth}{
-		\caption{The theoretical Kernel function is given in red, while the black curve comes from the analysis of a single point with a unit value.\label{kernel1}}}
+		\caption[Theoretical Kernel function and analysis of a single point with a unit value.]{The theoretical Kernel function is given in red, while the black curve comes from the analysis of a single point with a unit value.\label{kernel1}}}
 \end{figure}
 
 The Kernel function can be used to calibrate \diva parameters ($\alpha_0, \alpha_1, \mu$) so as to fit observed covariance functions. This principle is used by the tool \command{divafit} which helps one to estimate the correlation length (see Section~\ref{sec:divafit}).
