--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -111,7 +111,7 @@ Simply type:
 \end{description}
 
 %--------------------
-\section{Input files}
+\section{Input files\label{sec:diva2Dinput}}
 %--------------------
 
 \subsection{Contour\label{contourdiva}}
