--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -46,7 +46,7 @@ awk '{print $2,$1,$3}' infile > outfile
 \subsection{Method 1: conversion from GEBCO topography\label{sec:topogebco}}
 %------------------------------------------------------
 
-The GEBCO bathymetry is distributed by the British Oceanographic Data Centre (BODC). If you have already registered, you can log in (https://www.bodc.ac.uk/my\_account/login/), otherwise it is necessary to register to become a new user. 
+The GEBCO bathymetry is distributed by the British Oceanographic Data Centre (BODC). If you have already registered, you can log in (\url{https://www.bodc.ac.uk/my\_account/login/}), otherwise it is necessary to register to become a new user. 
 
 Download the complete, global GEBCO One-Minute Grid file (\file{90n90s180w180e.zip}) from \url{http://www.bodc.ac.uk/data/online\_delivery/gebco/} and unzip it to obtain the file \file{GridOne.grd}. Download the software \texttt{GebcoCE\_GridOnly} as well and run it. 
 
@@ -202,11 +202,11 @@ Look into \file{dvdv2diva.f} in \directory{./src/Fortran/Util/} how to write suc
 
 \subsection{Method 4: using \diva on web}
 
-Goto \url{http://gher-diva.phys.ulg.ac.be/web-vis-test/diva.html}, upload any data (it can be the example provided on the web).
+Go to \url{http://gher-diva.phys.ulg.ac.be/web-vis-test/diva.html}, upload any data (it can be the example provided on the web).
 Then specify the output grid on the region where you want the topography and provide the resolution which is typical for the resolution you will use later for the analysis.
-Then perform the analysis with your "data". In the download section, you can download the topography in a netcdf file \file{diva\_bath.nc}. Save this file into your \directory{input}. Then on the command line, placed in this \directory{input}, execute \command{../../bin/divabath2topogrd.a}. This will create \file{topo.grd} and \file{TopoInfo.dat}.
+Perform the analysis with your "data". In the download section, you can download the topography in a NetCDF file \file{diva\_bath.nc}. Save this file into your \directory{input}. Then on the command line, placed in this \directory{input}, execute \command{../../bin/divabath2topogrd.a}. This will create \file{topo.grd} and \file{TopoInfo.dat}.
 
-If tapering with topography is needed, you can either work first in the netcdf file \file{diva\_bath.nc} before you run this executable or work on the gher format file \file{topo.grd} afterwards.& 
+If tapering with topography is needed, you can either work first in the NetCDF file \file{diva\_bath.nc} before you run this executable or work on the gher format file \file{topo.grd} afterwards.
 
 
 
