--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -212,6 +212,16 @@
   url = {http://www.ocean-sci.net/2/183/2006/}
 }
 
+@UNPUBLISHED{BECKERS13,
+  author = {J.-M. Beckers and A. Barth and C. Troupin and A. Alvera-Azc\'arate},
+  title = {{Some approximate and efficient methods to assess error fields in
+	spatial gridding with Diva (Data Interpolating Variational Analysis)}J.
+	Atmos. Oceanic Tech.},
+  note = {submitted to J. Atmos. Oceanic Tech.},
+  owner = {ctroupin},
+  timestamp = {2013.07.02}
+}
+
 @ARTICLE{BECKERS03,
   author = {Beckers, J.-M. and M. Rixen},
   title = {{EOF} Calculation and Data Filling from Incomplete Oceanographic
@@ -546,7 +556,7 @@
   pages = {13529-13541}
 }
 
-@BOOK{fcef9d7c510749b0b422021ae57bd58c,
+@BOOK{NIELSEN12,
   title = {Modeling of Thermo-Electro-Mechanical Manufacturing Processes with
 	Applications in Metal Forming and Resistance Welding},
   publisher = {Springer},
