--- a/4-DivaInstallation2.tex
+++ b/4-DivaInstallation2.tex
@@ -1,4 +1,4 @@
-\chapter{Installation of the software}
+\chapter{Installation of the software\label{chap:installation}}
 %-------------------------------
 
 \diva is a software designed to run with any operating system (Microsoft Windows, Linux, Mac OS X). The main steps for the the installation are described in this chapter. A more detailed and up-to-date list of instructions is available on the Installation web page of \diva: \url{http://modb.oce.ulg.ac.be/mediawiki/index.php/Diva_installation}
